--- a/pom.xml
+++ b/pom.xml
@@ -80,11 +80,11 @@
   
   <dependencies>
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>18.0</version>
+    <groupId>com.google.guava</groupId>
+    <artifactId>guava</artifactId>
+    <version>30.1-jre</version>
     </dependency>
-	<dependency>
+ 	<dependency>
 	    <groupId>com.google.cloud.dataflow</groupId>
 	    <artifactId>google-cloud-dataflow-java-sdk-all</artifactId>
 	    <version>1.9.0</version>
